<resources>
    <string name="app_name">ID Scanner New</string>
    <string name="title_activity_splash"> </string>
    <string name="title_activity_scanner">ScannerActivity</string>

    <!--scanner-->

    <string name="text_scan_hint">Наведите сканнер\nна ID-карту</string>
    <string name="qr_scanner">ID сканер</string>
    <string name="scan_qr_code">Сканировать ID-карту</string>
    <string name="camera_permission_reason">Разрешите доступ к \"Камере\" Это позволит Вам сканировать ID-карту в приложении \"ID SCANNER\"</string>
    <string name="qr_scan_hint">Наведите сканнер на ID-карту</string>
    <string name="qr_camera_permission">Для того чтобы сделать фото, необходимо принять разрешения в настройках приложения</string>
    <string name="qr_unknown_code">Ошибка сканирования карты</string>
    <string name="txt_create_photo">Сделать фото</string>
    <string name="txt_photo_permission">Разрешите доступ к "Камере". Это позволит Вам сделать фото.</string>
    <string name="txt_give_camera_permission">Разрешить доступ к камере</string>
    <string name="qr_code_scan">Отсканировать ID-карту</string>
    <string name="qr_code_generated_description">Дайте отсканировать ID-карту, чтобы поделиться информацией о Вашем профиле</string>

    <!--    container-->
    <string name="container_explain">Поля необходимые для заполнения:</string>
    <string name="button_manually">Ввести вручную</string>
    <string name="button_automatically">Сканировать карту</string>
    <string name="document_hint">Номер документа</string>
    <string name="expiration_hint">Время действия(yymmdd)</string>
    <string name="date_hint">Дата рождения(yymmdd)</string>
    <string name="read_nfc">Считать данные с помощью NFC</string>
    <string name="error_empty_text">Поле не может быть пустым</string>

    <!--    nfc-->
    <string name="nfc_title">Положите устройство поверх паспорта и не двигайте его</string>
    <string name="warning_authentication_failed">Authentication has failed! Please try to scan the document again or introduce the data manually.</string>
    <string name="error_reading_nfc">При чтении данных возникла ошибка, попробуйте еще раз</string>
    <string name="warning_cla_not_supported">Impossible to read the document. Passport doesn\'t support CLA .</string>
    <string name="doc_number">Номер документа: %1s</string>
    <string name="doc_dob">Дата рождения: %1s</string>
    <string name="doc_expiry">Дата окончания: %1s</string>
    <string name="warning_no_nfc">There is no NFC available</string>
    <string name="warning_enable_nfc">You need to enable NFC</string>

    <string name="document_valid_passport">Valid passport</string>
    <string name="document_invalid_passport">Invalid Passport</string>
    <string name="document_unknown_passport_title">Unknown Passport</string>
    <string name="document_chip_content_success">The passport chip and content are valid</string>
    <string name="document_content_success">The passport content is valid</string>
    <string name="document_chip_failure">The passport chip is invalid</string>
    <string name="document_document_failure">The passport document information is invalid</string>
    <string name="document_unknown_passport_message">Unable to authenticate the passport</string>

    <string name="name">%1s %2s</string>

    <string name="label_document_number">Document Number</string>
    <string name="label_document_expiry">Expiration Date</string>
    <string name="label_document_issued">Issuing Date</string>
    <string name="label_document_issuing_state">Issuing State</string>
    <string name="label_document_nationality">Nationality</string>
    <string name="label_passport">Passport</string>
    <string name="label_not_available">NA</string>

    <string name="label_authentication">Authentication</string>
    <string name="label_authentication_bac">BAC</string>
    <string name="label_authentication_pace">PACE</string>
    <string name="label_authentication_chip">Chip</string>
    <string name="label_authentication_passive">Passive</string>
    <string name="label_authentication_active">Active</string>
    <string name="label_authentication_eac">EAC</string>
    <string name="label_authentication_document_signing">Document Signing</string>

    <string name="label_additional_information">Additional person information</string>
    <string name="label_additional_information_custody">Custody</string>
    <string name="label_additional_information_dob">Date of birth</string>
    <string name="label_additional_information_other_names">Other names</string>
    <string name="label_additional_information_other_valid_td_numbers">Other Td numbers</string>
    <string name="label_additional_information_permanent_address">Permanent address</string>
    <string name="label_additional_information_personal_number">Personal number</string>
    <string name="label_additional_information_personal_summary">Personal summary</string>
    <string name="label_additional_information_place_of_birth">Place of birth</string>
    <string name="label_additional_information_profession">Profession</string>
    <string name="label_additional_information_telephone">Telephone</string>
    <string name="label_additional_information_title">Title</string>

    <string name="label_additional_document_information">Additional document information</string>
    <string name="label_additional_document_information_endorsements_and_observations">Observations</string>
    <string name="label_additional_document_information_date_and_time_of_personalization">Date personalization</string>
    <string name="label_additional_document_information_date_of_issue">Date issue</string>
    <string name="label_additional_document_information_image_front">Image front</string>
    <string name="label_additional_document_information_image_rear">Image rear</string>
    <string name="label_additional_document_information_issuing_authority">Issuing authority</string>
    <string name="label_additional_document_information_names_of_other_persons">Names of other persons</string>
    <string name="label_additional_document_information_personalization_system_serial_number">System serial number</string>
    <string name="label_additional_document_information_tax_or_exit_requirements">Tax or exit requirements</string>

    <string name="label_document_signing_certificate">Document Signing Certificate</string>
    <string name="label_country_signing_certificate">Country Signing Certificate</string>
    <string name="label_certificate_serial_number">Serial number</string>
    <string name="label_certificate_public_key_algorithm">Public key algorithm</string>
    <string name="label_certificate_signature_algorithm">Signature algorithm</string>
    <string name="label_certificate_thumbprint">Certificate thumbprint</string>
    <string name="label_certificate_issuer">Issuer</string>
    <string name="label_certificate_subject">Subject</string>
    <string name="label_certificate_valid_from">Valid from</string>
    <string name="label_certificate_valid_to">Valid to</string>

<!--    auth activity-->

    <string name="bank_name">А-Банк</string>
    <string name="login_placeholder">Номер телефона</string>
    <string name="password_placeholder">Пароль</string>
    <string name="enter_button">Войти</string>
    <string name="unknown_server_error">Неизвестная ошибка</string>

<!--    otp activity-->

    <string name="otp_hint">1234</string>
    <string name="enter_code_from_sms">Введите код из смс</string>

<!--    select activity-->

    <string name="select_header_title">Выберите заявку на идентификацию клиента</string>
    <string name="bottom_dialog_logout">Выйти</string>
    <string name="bottom_dialog_cancel">Отмена</string>
    <string name="bottom_dialog_title">Выберите действие</string>

<!--    passport details fragment-->

    <string name="success_read_title">Информация была считана и отправлена на сервер</string>
    <string name="success_read_description">Для продолжения работы вернитесь к заявке на рабочем столе</string>
    <string name="button_back_title">Вернуться к выбору</string>

    <string name="transition_button">buttonTransition</string>
    <string name="transition_title">titleTransition</string>
    <string name="transition_logo">logoTransition</string>
    <string name="transition_inputs">inputsTransition</string>

</resources>
