<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/auth_regular_margin">

            <TextView
                android:id="@+id/explainTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/container_explain"
                android:textColor="@color/details_text"
                android:layout_marginTop="100dp"
                android:transitionName="@string/transition_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inputsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/explainTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:transitionName="@string/transition_inputs">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/documentInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/hint_color"
                    android:layout_marginTop="16dp"
                    android:theme="@style/TextInputLayoutAppearance"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/document_hint"
                        android:inputType="number"
                        android:textColor="@color/colorAccent" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/expireInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/hint_color"
                    android:theme="@style/TextInputLayoutAppearance"
                    app:layout_constraintTop_toBottomOf="@id/documentInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/expiration_hint"
                        android:inputType="number"
                        android:textColor="@color/colorAccent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/hint_color"
                    android:theme="@style/TextInputLayoutAppearance"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/expireInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_hint"
                        android:inputType="number"
                        android:textColor="@color/colorAccent" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/buttonReadNFC"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/bottom_button_selector"
                android:text="@string/read_nfc"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/automaticButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/automaticButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/bottom_button_selector"
                android:text="@string/button_automatically"
                android:textColor="@color/white"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="@dimen/auth_regular_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputsLayout"
                android:transitionName="@string/transition_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>