<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/activity_horizontal_margin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/logo_size_otp"
                app:srcCompat="@drawable/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:transitionName="@string/transition_logo"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_regular_margin"
                android:text="@string/bank_name"
                style="@style/TextStyleMain.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo"
                android:transitionName="@string/transition_title"/>

            <com.abank.idcard.presentation.screens.auth.otp.widget.PinBoxView
                android:id="@+id/pbCode"
                android:layout_width="250dp"
                android:layout_height="66dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/auth_regular_margin"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toTopOf="@id/bSendOtp"
                android:layout_marginBottom="@dimen/auth_regular_margin"
                android:transitionName="@string/transition_inputs"/>

            <Button
                android:id="@+id/bSendOtp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/bottom_button_selector"
                android:text="@string/enter_button"
                android:textColor="@color/white"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:transitionName="@string/transition_button"/>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bSendOtp"
                app:layout_constraintBottom_toBottomOf="@id/bSendOtp"
                app:layout_constraintStart_toEndOf="@id/bSendOtp"
                android:layout_marginStart="6dp"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>